# rail_halloween

./: README.md
assistance_arbitration/assistance_arbitrator/: CMakeLists.txt  package.xml  setup.py
assistance_arbitration/assistance_arbitrator/config/: datalogger.yaml
assistance_arbitration/assistance_arbitrator/launch/: arbitrator.launch
assistance_arbitration/assistance_arbitrator/src/assistance_arbitrator/: server.py
assistance_arbitration/assistance_arbitrator/src/assistance_arbitrator/monitors/: base_stall_monitor.py  battery_state_monitor.py  costmap_monitor.py  octomap_monitor.py  wifi_monitor.py
assistance_arbitration/assistance_msgs/: README.md
assistance_arbitration/assistance_msgs/msg/: TaskStepMetadata.msg
assistance_arbitrator/: CMakeLists.txt  README.md  package.xml
assistance_arbitrator/launch/: arbitrator.launch
assistance_arbitrator/scripts/: datalogger_node.py  monitor_node.py  server_node.py
assistance_arbitrator/src/assistance_arbitrator/: execution_monitor.py  execution_trace_monitor.py  monitor.py  monitoring.py  server.py
assistance_arbitrator/src/assistance_arbitrator/monitors/: __init__.py  base_collision_monitor.py  base_stall_monitor.py  breaker_state_monitor.py  costmap_monitor.py  diagnostics_monitor.py  global_plan_monitor.py  localization_monitor.py  robot_state_monitor.py  rosgraph_monitor.py  trace_monitor.py  wifi_monitor.py
assistance_msgs/: CMakeLists.txt  package.xml
assistance_msgs/action/: RequestAssistance.action
assistance_msgs/msg/: Context.msg  ExecutionEvent.msg  MonitorMetadata.msg
candy_manipulation/: CMakeLists.txt  README.md  package.xml
candy_manipulation/action/: Drop.action  Grasp.action  Stir.action
candy_manipulation/include/candy_manipulation/: candy_manipulator.h
candy_manipulation/scripts/: grasp_verifier.py
candy_manipulation/src/: candy_manipulator.cpp
data_recorder/: CMakeLists.txt  package.xml
data_recorder/action/: Playback.action
data_recorder/scripts/: playback_executor.py  playback_test.py
data_recorder/src/data_recorder/: executor.py  recorder.py
install/: simulation.rosinstall
local_interfaces/: README.md
local_interfaces/bagposefromperson/: CMakeLists.txt  README.md  package.xml
local_interfaces/bagposefromperson/action/: GetBagPose.action
local_interfaces/bagposefromperson/scripts/: bag_pose.py  bag_pose_client.py
local_interfaces/hotword_detector/: CMakeLists.txt  README.md  package.xml  setup.py
local_interfaces/hotword_detector/action/: DetectHotWord.action
local_interfaces/hotword_detector/launch/: hotword_detector.launch
local_interfaces/hotword_detector/nodes/: hotword_detector_node
local_interfaces/hotword_detector/src/hotword_detector/: detector.py  hotword_detector.py
local_interfaces/hotword_detector/src/hotword_detector/resources/: trickortreat.pmdl
local_interfaces/hotword_detector_pkg/: CMakeLists.txt  README.md  package.xml  setup.py
local_interfaces/hotword_detector_pkg/launch/: hotword_detector.launch
local_interfaces/hotword_detector_pkg/src/hotword_detector_pkg/: hotword_detector.py
local_interfaces/hotword_detector_pkg/src/hotword_detector_pkg/resources/: trickortreat_f.pmdl  trickortreat_m.pmdl
local_interfaces/hotword_detector_pkg/srv/: DetectHotWord.srv
local_interfaces/local_strategy/: CMakeLists.txt  README.md  package.xml  setup.py
local_interfaces/local_strategy/launch/: recovery_strategy.launch
local_interfaces/local_strategy/scripts/: server_node.py
local_interfaces/local_strategy/src/local_strategy/: dialogue.py  server.py  speak.py  strategy.py
local_interfaces/sound_interface/: README.md
local_interfaces/sound_interface/src/sound_interface/: sound_client.py  sound_server.py
manipulation/candy_manipulation/: package.xml
manipulation/candy_manipulation/action/: Grasp.action
manipulation/candy_manipulation/include/candy_manipulation/: candy_manipulator.h
manipulation/candy_manipulation/scripts/: grasp_verifier.py
manipulation/candy_manipulation/src/: candy_manipulator.cpp
remote_interfaces/: README.md
rosinstall/: simulation.rosinstall
simulation_helpers/: CMakeLists.txt  README.md  package.xml
simulation_helpers/config/: analyzers.yaml
simulation_helpers/scripts/: closest_person_generator.py  simulated_robot_driver.py
simulation_helpers/srv/: CreatePerson.srv
task_executor/: CMakeLists.txt  README.md  package.xml
task_executor/config/: robot.yaml  simulation.yaml  tasks.yaml
task_executor/doc/: examples.txt
task_executor/launch/: executor.launch  fetch_deliver.launch  task_executor.launch  trick_or_treat.launch
task_executor/msg/: ExecutionEvent.msg
task_executor/scripts/: grasp_verifier.py  idle_behaviour_node.py  run_action.py  run_halloween.py  run_task.py  server_node.py
task_executor/src/task_executor/: abstract_action.py  abstract_step.py  database.py  ops.py  server.py  tasks.py
task_executor/src/task_executor/actions/: __init__.py  arm.py  arm_pose.py  background_task.py  bagpose_trigger.py  beep.py  compliant_mode.py  detach_candy.py  drop_candy.py  drop_pose.py  find_bag_pose.py  find_closest_person.py  find_grasps.py  find_object.py  gripper.py  hotword_trigger.py  joystick_trigger.py  listen.py  look.py  look_at_closest_person.py  move.py  perceive.py  pick.py  pick_candy.py  place.py  ready_pose.py  speak.py  stir.py  toggle_breakers.py  torso.py  trigger.py  tuck.py  tuck_pose.py  verify_grasp.py
task_executor/srv/: GetArmPose.srv  GetTrajectory.srv
