<?xml version="1.0"?>
<package>
  <name>hotword_detector</name>
  <version>0.0.1</version>
  <description>This package stores commonly used finite state machines for SAN.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="adaruna3@gatech.edu">Angel Andres Daruna</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/semantic_mapping</url> -->
  <author>Angel Andres Daruna</author> -->



  <buildtool_depend>catkin</buildtool_depend>
  <!-- build depends -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <!-- run depends -->
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
